# storage/api-docs/api-docs.json
@@ -165,13 +165,13 @@
                 ]
             }
         },
-        "/auth/get-info": {
-            "post": {
+        "/get-me": {
+            "get": {
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Hozirgi foydalanuvchi ma'lumotlari",
-                "operationId": "41a6f6591b665ebde663e52174e2ede7",
+                "operationId": "a00bacc3e465758a751ab2ad40ba462c",
                 "responses": {
                     "200": {
                         "description": "Foydalanuvchi ma'lumotlari qaytadi"
